-
Type:
Bug
-
Status: Closed
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: proton-c-0.18.1
-
Fix Version/s: proton-c-0.20.0
-
Component/s: cpp-binding, proton-c
-
Labels:None
- is blocked by
-
PROTON-1717 [C proactor] Allow initialization of transport and connection before binding
-
- Closed
-
- is related to
-
PROTON-1749 Add a C++ example demonstrating the use of the SASL APis
-
- Closed
-
- supercedes
-
PROTON-1570 SASL auth with GSSAPI fails: client isn't sending correct AMQP header even though SASL is explicitly enabled
-
- Closed
-