PROTON-1682: [C++ binding] Set SASL hostname at the correct time so that GSSAPI works